# dbpager

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Dockerfile  Makefile.am  Makefile.rules  README  README.md  autoclean.sh  autogen.sh  configure.ac  json2xml.cpp  merge-arch.yaml
debian/: changelog  control  copyright  dbp-cgi.install  dbp-cgi.manpages  dbpager-bdb.install  dbpager-doc.docs  dbpager-doc.examples  dbpager-ldap.install  dbpager-lib.install  dbpager-memcached.install  dbpager-mqtt.install  dbpager-odbc.install  dbpager-postgresql.install  dbpager-redis.install  dbpager-script.install  dbpager-sqlite.install  dbpager-xslt.install  dbpager.conf  (+15 more)
doc/guide/: Makefile.am  index.en.xml  index.ru.xml
doc/guide/about/: about.ru.xml  conventions.ru.xml  terms_and_conditions.ru.xml
doc/guide/modules/: mod_bdb.ru.xml  mod_odbc.ru.xml  overview.ru.xml
doc/guide/programmers_guide/: build.ru.xml  deploy.ru.xml  module.ru.xml
doc/guide/release_notes/: about_dbpager.ru.xml
doc/guide/style/css/: common.css  magula.css  print.css
doc/guide/style/dtd/: common.dtd  manual.dtd  messages.dtd  metafile.dtd  xhtml1-strict.dtd
doc/guide/style/js/: highlight.pack.js
doc/guide/style/lang/: en.msg  ru.msg
doc/guide/style/xsl/: common.xsl  manual.en.xsl  manual.ru.xsl  print.xsl
doc/guide/sysadmin_guide/: about.ru.xml  admin.ru.xml  cluster.ru.xml  config_other.ru.xml  configure.ru.xml  setup.ru.xml
doc/guide/users_guide/: lang_comp.ru.xml  lang_exceptions.ru.xml  lang_index.ru.xml  lang_ml.ru.xml  lang_overview.en.xml  lang_overview.ru.xml  lang_string.ru.xml  lang_subroutines.ru.xml  lang_summary.ru.xml  lang_system.ru.xml  lang_vars.ru.xml
src/dbpager/: Makefile.am
src/dbpager/application/: dbp_cgi.cpp  dbp_isapi.cpp  dbpager.cpp  dbpagerd.cpp  mod_dbp.cpp
src/dbpager/interpreter/: dbpager_application.cpp  dbpager_application.h  environment.cpp  environment.h  interpreter.cpp  interpreter.h
src/dbpager/optimizer/: optimizer.cpp  optimizer.h
src/dbpager/parser/: dbpx_parser.cpp  dbpx_parser.h  parser.h
src/dbpager/pool/: cache.h  memcached_cache.cpp  memcached_cache.h
src/dbpager/services/: session_int.h
src/dbpager/tag/: functions.cpp  functions.h  tag_async.cpp  tag_async.h  tag_call.cpp  tag_call.h  tag_case.cpp  tag_case.h  tag_catch.cpp  tag_catch.h  tag_cdata.cpp  tag_cdata.h  tag_delete.cpp  tag_delete.h  tag_execute.cpp  tag_execute.h  tag_expression.cpp  tag_expression.h  tag_factory.cpp  tag_factory.h  tag_http.cpp  tag_http.h  tag_list.cpp  tag_list.h  tag_locale.cpp  tag_locale.h  tag_log.cpp  tag_log.h  tag_map.cpp  tag_map.h  tag_read.cpp  tag_read.h  tag_regexp.cpp  tag_regexp.h  tag_rename.cpp  tag_rename.h  tag_set.cpp  tag_set.h  tag_split.cpp  tag_split.h  (+18 more)
src/libdbpager/: Makefile.am  context.cpp  tag_impl.cpp  tag_tag.cpp  tag_usr.cpp
src/libdbpager/include/: Makefile.am
src/libdbpager/include/dbpager/: Makefile.am  consts.h.in  context.h  queue.h  services.h  session.h  tag.h  tag_impl.h  tag_tag.h  tag_usr.h
src/modules/dbp_bdb/: Makefile.am  dbp_bdb.conf.in  dbp_bdb_factory.cpp  tag_delete.cpp  tag_delete.h  tag_find.cpp  tag_find.h  tag_get.cpp  tag_get.h  tag_set.cpp  tag_set.h  tag_storage.cpp  tag_storage.h
src/modules/dbp_gearman/: Makefile.am  dbp_gearman.conf.in  dbp_gearman_factory.cpp  tag_server.cpp  tag_server.h  tag_task.cpp  tag_task.h
src/modules/dbp_ldap/: Makefile.am  README.md  dbp_ldap.conf.in  dbp_ldap_factory.cpp  ldap_client.cpp  ldap_client.h  tag_bind.cpp  tag_bind.h  tag_connection.cpp  tag_connection.h  tag_search.cpp  tag_search.h
src/modules/dbp_mongo/: Makefile.am  dbp_mongo.conf.in  dbp_mongo_factory.cpp  tag_database.cpp  tag_database.h  tag_delete.cpp  tag_delete.h  tag_insert.cpp  tag_insert.h  tag_param.cpp  tag_param.h  tag_query.cpp  tag_query.h  tag_update.cpp  tag_update.h
src/modules/dbp_mongo/mongo-cxx-driver-nightly/src/: SConscript.client
src/modules/dbp_mongo/mongo-cxx-driver-nightly/src/mongo/: buildinfo.cpp
src/modules/dbp_mqtt/: Makefile.am  dbp_mqtt.conf.in  dbp_mqtt_factory.cpp  tag_connection.cpp  tag_connection.h  tag_pub.cpp  tag_pub.h  tag_sub.cpp  tag_sub.h
src/modules/dbp_odbc/: Makefile.am  dbp_odbc.conf.in  dbp_odbc_factory.cpp  tag_database.cpp  tag_database.h  tag_query.cpp  tag_transaction.cpp
src/modules/dbp_pgsql/: Makefile.am  dbp_pgsql.conf.in  dbp_pgsql_factory.cpp  tag_database.cpp  tag_database.h  tag_query.cpp  tag_query.h  tag_transaction.cpp
src/modules/dbp_redis/: Makefile.am  dbp_redis.conf.in  dbp_redis_factory.cpp  redis_connection.h  tag_connection.cpp  tag_connection.h  tag_query.cpp  tag_query.h
src/modules/dbp_script/: Makefile.am  dbp_script.conf.in  dbp_script_factory.cpp  tag_javascript.cpp  tag_javascript.h
src/modules/dbp_sqlite/: Makefile.am  dbp_sqlite.conf.in  dbp_sqlite_factory.cpp  tag_database.cpp  tag_database.h  tag_query.cpp  tag_query.h  tag_transaction.cpp  tag_transaction.h
src/modules/dbp_xslt/: Makefile.am  dbp_xslt.conf.in  dbp_xslt_factory.cpp  tag_transform.cpp  tag_transform.h  tag_transform_json.cpp  tag_transform_json.h
src/modules/mod_logger_file/: Makefile.am  mod_logger_file.conf.in  mod_logger_file.cpp  mod_logger_file.h  mod_logger_file_factory.cpp
src/modules/mod_session_jwt/: Makefile.am  mod_session_jwt.conf.in  mod_session_jwt.cpp  mod_session_jwt.h  mod_session_jwt_factory.cpp
src/modules/mod_session_memcached/: Makefile.am  mod_session_memcached.conf.in  mod_session_memcached.cpp  mod_session_memcached.h  mod_session_memcached_factory.cpp
src/modules/mod_session_redis/: Makefile.am  mod_session_redis.conf.in  mod_session_redis.cpp  mod_session_redis.h  mod_session_redis_factory.cpp
tests/: Makefile.am  test.dbpx  test1.dbpx  test2.dbpx  test3.dbpx  test4.dbpx  test5.dbpx  test6.dbpx  test_call.dbpx  test_config.conf  test_env.dbpx  test_execute.cpp  test_execute_name.dbpx  test_functions.cpp  test_interpreter.cpp  test_ldap.dbpx  test_list.dbpx  test_map.dbpx  test_namespaces.dbpx  test_parser.cpp  test_redis.dbpx.manual  test_regexp.dbpx  test_tag_regexp.cpp  test_var_session.dbpx
(+57 files in other folders)
